syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "barbershop/src/pb/customer";

message Customer {
    string customer_id = 1;
    string name = 2;
    string email = 3;
    string phone = 4;
    int32 gender = 5;
    string avatar =7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp update_at = 9;
    google.protobuf.Timestamp password_changed_at = 10;
    bool is_social_auth = 11;
}