syntax = "proto3";

package pb;

option go_package = "barbershop/src/pb/customer";


message ChangePasswordCustomerRequest{
    string id_customer =1;
    string current_password = 2;
    string new_password = 3;
}

message ChangePasswordCustomerResponse {
    bool status = 1;
}